--- a/hw0/hw0.tex
+++ b/hw0/hw0.tex
@@ -40,8 +40,8 @@
 \newcommand{\hmwkClass}{Homework 0}
 \newcommand{\hmwkClassTime}{CSE 597}
 \newcommand{\hmwkClassInstructor}{ } 
-\newcommand{\hmwkAuthorNameb}{Roman Istomin}
-\newcommand{\hmwkNames}{XYZ}
+\newcommand{\hmwkAuthorNameb}{Roman Istomin (rji5040@psu.edu)}
+\newcommand{\hmwkNames}{HW0}
 
 % Setup the header and footer
 \pagestyle{fancy}
@@ -108,7 +108,7 @@ git clone git@github.com:romanis/CS597HW.git
 
 \subsection{Program overview}
 
-This is a serial hello world program, written in C. There is only one code file. The repository also contains the makefile for creating the executable, a readme, licensing information and the tex file for the write-up.
+This is a simple hello world program, written in C++. There is only one code file. The repository also contains the makefile for creating the executable, a readme, licensing information and the tex file for the write-up.
 
 
 \subsection{Instructions for running and verifying the code}
@@ -121,12 +121,14 @@ make
 
 \textbf{Running the program:}
 \begin{verbatim}
-./awl5173_helloWorld.out
+./hello
 \end{verbatim}
 
 \textbf{Expected output:}
 \begin{verbatim}
-awl5173 says "Hello, World!"
+What is your name?
+Roman
+hello, Roman
 \end{verbatim}
 
 \subsection{Instructions for compiling the write-up}
@@ -138,7 +140,7 @@ I used ACI to compile the document.  You can do this using the command:
 
 \section{Acknowledgements}
 
-I would like to acknowledge Chris Blanton and Chuck Pavloski for helping formulate the homework material, and Justin Petucci and Rahim Charania for helping to make sure the permissions were set correctly for the git information.
+I would like to acknowledge Chris Blanton and Chuck Pavloski for helping formulate the homework material.
 
 
 
